--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,5 +1,11 @@
 .first {
     color: red;
-     background: black;
+     background: yellow;
 }
+/* Single Line Comment */
 
+/*
+
+Multi-line Comment
+
+*/
