--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,11 +1,24 @@
 .first {
     color: red;
-     background: yellow;
+     background-image: url(https://dummyimage.com/600x400/960096/0011ff.png&text=test); height: 1000px; background-repeat: no-repeat;
+     background-color: darkcyan;
+     background-position: center;
+     background-attachment: fixed;
+}
+
+.RedTitle {
+    background-color: cadetblue
+    url(https://dummyimage.com/600x400/960096/0011ff.png&text=test) no-repeat fixed right bottom;
 }
 
 p {
     color:lightgrey;
-    background: black;
+    background-color: black;
+
+}
+
+h1 {
+    background-color: cyan;
 }
 
 #one {
