--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -70,7 +70,7 @@ h1 {
     width: 50%; /* max-width, min-width */
     background: darkmagenta;
 }
-
+/*
 #one {
     border-width: 10px;
     border-color: darkmagenta;
@@ -82,4 +82,11 @@ h1 {
     height: 200px;
     width: 200px;
     border-radius: 1000px;
+}
+*/
+#three {
+    margin-top: 100px;
+    margin-right: 200px;
+    background: red;
+    border: 1px solid black
 }
