--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -85,11 +85,10 @@ h1 {
 }
 */
 #three {
-    margin-top: 100px;
-    margin-right: 200px;
     background: red;
     border: 1px solid black;
     padding: 30px;
+    outline: 100px solid blue
 }
 
 
