--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -88,7 +88,8 @@ h1 {
     background: red;
     border: 1px solid black;
     padding: 30px;
-    outline: 100px solid blue
+    outline: 100px solid blue;
+    margin: 10px 50px 10px 50px;
 }
 
 
