--- a/Personal Tests/personal.css
+++ b/Personal Tests/personal.css
@@ -8,6 +8,9 @@
 }
 
 #Artifical_Intelligence_Image {
-    width: 100%;
-    height: 1000px;
+    width: 100%; /* width of container */
+    height: 150px; /* height of container */
+    overflow: hidden;
+    border: 5px solid black;
+    margin: -10px 0px 0px -180px;
 }
