Fixed the sizing for the image.

--- a/Personal Tests/personal.css
+++ b/Personal Tests/personal.css
@@ -3,14 +3,12 @@
 }
 
 #Mattmen_Main_Logo {
-    height: 67px;
-    width: 67px;
+    height: 50px;
+    width: 50px;
 }
 
 #Artifical_Intelligence_Image {
     width: 100%; /* width of container */
-    height: 150px; /* height of container */
-    overflow: hidden;
-    border: 5px solid black;
-    margin: -10px 0px 0px -180px;
+    height: 700px; /* height of container */
+    object-fit: cover;
 }
