--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -84,4 +84,14 @@ h1 {
     border-right: dashed fuchsia;
 }
 
+p:first-child {
+    background: aqua;
+}
 
+p:hover {
+    backtground: green;
+}
+
+a:link {
+    color:red;
+}
