--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -69,7 +69,7 @@ h1 {
     height: 200px;
     width: 200px;
     margin: 1000px;
-    border-left: 100px;
+    border-left: 100px; 
     text-align: center;
 }
 
@@ -89,7 +89,7 @@ p:first-child {
 }
 
 p:hover {
-    backtground: green;
+    background: green;
 }
 
 a:link {
