Did some testing on the different font alterations associated with CSS code.

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -86,6 +86,11 @@ h1 {
 
 p:first-child {
     background: aqua;
+    font-family: fantasy;
+    font-style: italic;
+    font-weight: 200;
+    font-variant: small-caps;
+    font-size: 10px;
 }
 
 p:hover {
