--- a/CSS/SideBarNav.css
+++ b/CSS/SideBarNav.css
@@ -30,10 +30,17 @@ p {
     font-size: 2em;
 }
 
+p:first-child {
+    font-size: 3em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: orange;
+}
+
 .Lorem {
     background: yellowgreen;
     text-decoration: slategray;
     text-align: right;
     font-size: 1.5em;
     padding: 10px;
+    height: 100px;
 }
