Added styling for the unordered list.

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -96,6 +96,14 @@ p:first-child {
     font-size: 10px;
 }
 
+ul {
+    background:orangered;
+    font: purple;
+    padding: 0;
+    margin: 0;
+    text-decoration:dashed ;
+}
+
 p:hover {
     background: green;
 }
