--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -101,7 +101,15 @@ ul {
     font: purple;
     padding: 0;
     margin: 0;
-    text-decoration:dashed ;
+    text-decoration:dashed;
+}
+
+ul:hover {
+    background:red;
+    font:grey;
+    padding: 0;
+    margin: 0;
+    text-decoration: double;
 }
 
 p:hover {
