--- a/CSS/SideBarNav.css
+++ b/CSS/SideBarNav.css
@@ -44,3 +44,34 @@ p:first-child {
     padding: 10px;
     height: 100px;
 }
+
+div {
+    border: firebrick;
+    border-radius: 10px;
+    font: small-caps;
+    font-size: 1em;
+}
+
+div:hover {
+    border: firebrick;
+    border-radius: 5px;
+    font:small-caps;
+    font-size: 2em;
+}
+
+
+ul {
+    background:orangered;
+    font: purple;
+    padding: 0;
+    margin: 0;
+    text-decoration:dashed;
+}
+
+ul:hover {
+    background:red;
+    font:grey;
+    padding: 0;
+    margin: 0;
+    text-decoration: double;
+}
