--- a/CSS/SideBarNav.css
+++ b/CSS/SideBarNav.css
@@ -21,6 +21,7 @@ aside a {
 aside a:hover {
     font-size: 1.75em;
     float: inline-start;
+    cursor:grab;
 }
 
 p {
@@ -57,6 +58,7 @@ div:hover {
     border-radius: 5px;
     font:small-caps;
     font-size: 2em;
+    cursor: wait;
 }
 
 
@@ -74,4 +76,5 @@ ul:hover {
     padding: 0;
     margin: 0;
     text-decoration: double;
+    cursor: crosshair;
 }
