--- a/CSS/AdvancedCSS.css
+++ b/CSS/AdvancedCSS.css
@@ -25,17 +25,17 @@
 .five {
     height:  400px;
     width: 100%;
-    background: linear-gradient(0deg,green,red)
+    background: radial-gradient(green,red)
 }
 
 .six {
     height:  400px;
     width: 100%;
-    background: linear-gradient(red, green, blue, purple)
+    background: radial-gradient(red, green, blue, purple)
 }
 
 footer {
     height:  400px;
     width: 100%;
-    background: linear-gradient(to left, red 25%, lime 33%, blue 25%, yellow)
+    background: radial-gradient(to left, red 25%, lime 33%, blue 25%, yellow)
 }
