Ddi testing on animations!

--- a/CSS/AdvancedCSS.css
+++ b/CSS/AdvancedCSS.css
@@ -96,6 +96,7 @@ footer {
     overflow: hidden;
 }
 */
+/*
 .one {
     transform: rotateX(180deg);
     background: red;
@@ -145,4 +146,27 @@ footer {
     width: 200px;
     height: 100px;
     overflow: hidden;
+}
+*/
+
+@keyframes example{
+    0% {width: 100px; left:100px}
+    25% {width: 200px; left:10px}
+    50% {width: 300px; left: 100px}
+    75% {width: 400px; left: 20px}
+    100% {width: 500px; left: 50px}
+}
+
+.one {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    width: 50px;
+    height: 200px;
+    background: red;
+    animation-name: example;
+    animation-duration: 2s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
