--- a/CSS/NewestCSSFile.css
+++ b/CSS/NewestCSSFile.css
@@ -4,13 +4,13 @@
 }
 
 #q1 {
-
+    border: 1px darkblue dashed;
 }
 
 #q2 {
-
+    border: 1px darkred solid;
 }
 
 #q3 {
-
+    border: 1px darkgoldenrod dotted;
 }
