--- a/CSS/NewestCSSFile.css
+++ b/CSS/NewestCSSFile.css
@@ -1,22 +1,34 @@
-.content > div {
+#content > p {
     display: flex;
     flex-wrap: wrap;
+    justify-content: left;
 }
 
-.q1 {
-    border: 1px darkblue dashed;
+#q1 {
+    border: 10px darkblue dashed ;
     width: 50%;
     height: 100px;
+    border-top-width: 100px;
+    border-top-style: solid;
+    border-left-style: groove;
+    border-right-width: 500px;
+    border-left-width: 500px;
 }
 
 #q2 {
-    border: 1px darkred solid;
+    border: 10px darkred solid ;
     width: 50%;
     height: 100px;
+    border-left-width: 1600px;
+    
 }
 
 #q3 {
-    border: 1px darkgoldenrod dotted;
+    border: 10px darkgoldenrod dashed ;
     width: 50%;
     height: 100px;
+    border-right-width: 1600px;
+    border-bottom-width: 100px;
+    border-bottom-style: solid;
+    border-left-style: groove;
 }
