Played around with justify content function in CSS.

--- a/CSS/NewestCSSFile.css
+++ b/CSS/NewestCSSFile.css
@@ -1,7 +1,7 @@
 #content > p {
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: space-between;
 }
 
 #q1 {
