--- a/CSS/NewestCSSFile.css
+++ b/CSS/NewestCSSFile.css
@@ -13,6 +13,7 @@
     border-left-style: groove;
     border-right-width: 500px;
     border-left-width: 500px;
+    order: 1;
 }
 
 #q2 {
@@ -20,6 +21,7 @@
     width: 50%;
     height: 100px;
     border-left-width: 1600px;
+    order: 3;
     
 }
 
@@ -31,4 +33,5 @@
     border-bottom-width: 100px;
     border-bottom-style: solid;
     border-left-style: groove;
+    order: 2;
 }
