--- a/CSS/NewestCSSFile.css
+++ b/CSS/NewestCSSFile.css
@@ -1,7 +1,17 @@
-#content > p {
+* {
+    box-sizing: border-box;
+}
+
+#content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: stretch;
+    height: 300px;
+}
+
+#content > p {
+
 }
 
 #q1 {
@@ -13,7 +23,7 @@
     border-left-style: groove;
     border-right-width: 500px;
     border-left-width: 500px;
-    order: 1;
+    
 }
 
 #q2 {
@@ -21,7 +31,7 @@
     width: 50%;
     height: 100px;
     border-left-width: 1600px;
-    order: 3;
+    
     
 }
 
