--- a/CSS/NewestCSSFile.css
+++ b/CSS/NewestCSSFile.css
@@ -6,12 +6,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: flex-start;
     height: 300px;
 }
 
 #content > p {
-    border: 10px darkblue dashed ;
+    border: 10px darkblue groove ;
     width: 50%;
     height: 100px;
 }
@@ -19,7 +19,7 @@
 #q1 {
     border-top-width: 100px;
     border-top-style: solid;
-    border-left-style: groove;
+    border-left-style: dashed;
     border-right-width: 500px;
     border-left-width: 500px;
     
@@ -37,14 +37,14 @@
     border-right-width: 1600px;
     border-bottom-width: 100px;
     border-bottom-style: solid;
-    border-left-style: groove;
+    border-left-style: dashed;
 }
 #q4 {
     width: 50%;
     height: 100px;
     border-right-width: 1600px;
     border-bottom-width: 100px;
-    border-left-style: groove;
+    border-left-style: dashed;
 }
 #q5 {
     width: 50%;
@@ -58,5 +58,5 @@
     border-right-width: 1600px;
     border-bottom-width: 100px;
     border-bottom-style: solid;
-    border-left-style: groove;
+    border-left-style: dashed;
 }
