--- a/CSS/NewestCSSFile.css
+++ b/CSS/NewestCSSFile.css
@@ -17,6 +17,7 @@
 }
 
 #q1 {
+    text-emphasis: italic;
     border-top-width: 100px;
     border-top-style: solid;
     border-left-style: dashed;
@@ -26,12 +27,14 @@
 }
 
 #q2 {
+    text-emphasis: italic;
     width: 50%;
     height: 100px;
     border-left-width: 1600px;
 }
 
 #q3 {
+    text-emphasis: italic;
     width: 50%;
     height: 100px;
     border-right-width: 1600px;
@@ -40,6 +43,7 @@
     border-left-style: dashed;
 }
 #q4 {
+    text-emphasis: bold;
     width: 50%;
     height: 100px;
     border-right-width: 1600px;
@@ -47,12 +51,14 @@
     border-left-style: dashed;
 }
 #q5 {
+    text-emphasis: bold;
     width: 50%;
     height: 100px;
     border-right-width: 1600px;
     border-bottom-width: 100px;
 }
 #q6 {
+    text-emphasis: bold;
     width: 50%;
     height: 100px;
     border-right-width: 1600px;
