--- a/Flex Image Gallery Challenge/flexgal.css
+++ b/Flex Image Gallery Challenge/flexgal.css
@@ -2,3 +2,9 @@
     box-sizing: border-box;
 }
 
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+}
