Added a media query that allows the page to be resized and the images to still be neat on mobile platforms

--- a/Flex Image Gallery Challenge/flexgal.css
+++ b/Flex Image Gallery Challenge/flexgal.css
@@ -10,6 +10,17 @@
 }
 
 .col {
-    width: 200px;
-    height: 100px;
+    flex: 33.3%;
+    padding: 10px;
+    
+}
+
+img{
+    width: 100%;
+}
+
+@media (max-width: 680px) {
+    .col{
+        flex: 50%;
+    }
 }
