--- a/Flex Image Gallery Challenge/flexgal.css
+++ b/Flex Image Gallery Challenge/flexgal.css
@@ -23,3 +23,10 @@ img{
         flex: 50%;
     }
 }
+
+.header {
+    text-decoration: black;
+    text-align: center;
+    text-transform: uppercase;
+    
+}
