Added more styling to the page.

--- a/Flex Image Gallery Challenge/flexgal.css
+++ b/Flex Image Gallery Challenge/flexgal.css
@@ -27,6 +27,13 @@ img{
 .header {
     text-decoration: black;
     text-align: center;
-    text-transform: uppercase;
-    
+    text-transform: capitalize;
+    font-size: 50px;
+}
+
+.footer {
+    text-decoration: black;
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 15px;
 }
