--- a/Flex Image Gallery Challenge/flexgal.css
+++ b/Flex Image Gallery Challenge/flexgal.css
@@ -24,16 +24,25 @@ img{
     }
 }
 
-.header {
+#header {
     text-decoration: black;
     text-align: center;
     text-transform: capitalize;
     font-size: 50px;
 }
 
-.footer {
+#footer {
     text-decoration: black;
     text-align: center;
     text-transform: capitalize;
     font-size: 15px;
+}
+
+#introduction {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: lightslategray;
+    background: black;
+    border: lightslategray;
+    border-radius: 10px;
+    margin: 10px;
 }
