--- a/Flex Image Gallery Challenge/flexgal.css
+++ b/Flex Image Gallery Challenge/flexgal.css
@@ -45,3 +45,10 @@ img{
     background: black;
     text-align: center;
 }
+
+#conclusion {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: lightcoral;
+    background: pink;
+    text-align: center;
+}
