--- a/CSS/AdvancedCSS.css
+++ b/CSS/AdvancedCSS.css
@@ -172,11 +172,12 @@ footer {
 }
 */
 .container {
-    display: flex;
-    flex-direction: row-reverse;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
 }
 
 .container > div {
-    flex: 1;
-    border: 1px solid darkgray;
+    border: 1px solid red;
+    padding: 10px;
+    width: 100px;
 }
