--- a/CSS/AdvancedCSS.css
+++ b/CSS/AdvancedCSS.css
@@ -173,22 +173,11 @@ footer {
 */
 .container {
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
-}
-
-.one {
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-
-.two {
-    grid-row-start: 1;
-    grid-row-end: 3;
-}
-
-.three {
-    grid-column-start: 5;
-    grid-row-end: 7;
+    grid-template-columns: auto auto auto;
+    align-content: end;
+    justify-content: center;
+    height: 600px;
+    background: red;
 }
 
 .container > div {
