9 Grid Items CSS In this lesson, I learned how to use grid-column, grid-row, and grid-area to further manipulate a grid.

--- a/CSS/AdvancedCSS.css
+++ b/CSS/AdvancedCSS.css
@@ -173,15 +173,42 @@ footer {
 */
 .container {
     display: grid;
-    grid-template-columns: auto auto auto;
-    align-content: end;
-    justify-content: center;
-    height: 600px;
+    grid-template-columns: auto auto auto auto;
     background: red;
 }
 
+.three {
+    grid-area: 1 / 2 / 3 / 4;
+}
+
+/* .one {
+    grid-row: 1 / 4;
+}
+
+.three {
+    grid-row: 1 / span 2;
+}
+
+.one {
+    grid-column: 1 / 4;
+}
+
+.four {
+    grid-column: 2 / 5;
+}
+
+.five {
+    grid-column: 1 / span 2;
+}
+
+.six {
+    grid-column: 3 / span 2;
+} */
+
 .container > div {
     border: 1px solid red;
+    text-align: center;
     padding: 10px;
-    width: 100px;
+    background: white;
+    overflow: hidden;
 }
